# IsoCrates

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  USAGE_GUIDE.md  deploy.sh  dev-backend.sh  dev-frontend.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
agent/: .dockerignore  (+21 more)
backend/: .dockerignore  .env.example  Dockerfile  migrate_crate_to_path.py  pyproject.toml  worker.py
backend/app/: database.py  exceptions.py  main.py
backend/app/api/: __init__.py  auth_routes.py  dependencies.py  documents.py  folders.py  jobs.py  personal.py  versions.py  webhooks.py
backend/app/core/: __init__.py  auth.py  config.py  logging_config.py  migrator.py  seeder.py  token_factory.py
backend/app/middleware/: __init__.py  exception_handler.py  request_context.py
backend/app/models/: __init__.py  dependency.py  document.py  folder_metadata.py  generation_job.py  personal.py  user.py  version.py
backend/app/repositories/: __init__.py  base.py  dependency_repository.py  document_repository.py  folder_repository.py  personal_tree_repository.py  version_repository.py
backend/fixtures/: seed_documents.json
backend/migrations/: 001_make_repo_fields_optional.sql  001_rollback_repo_fields.sql  002_add_folder_metadata.sql  003_rename_collection_to_crate.sql  003_rollback.sql  004_add_personal_tree.sql  005_add_soft_delete.sql  006_add_fts5.sql  006_add_indexes.sql  007_multi_user.sql  008_add_version_column.sql  010_add_fts5.sql  010_add_fts_postgres.sql  011_add_description_and_embedding.sql  012_add_pgvector.sql  013_add_description_to_fts.sql  013_add_description_to_fts_postgres.sql  014_add_composite_indexes.sql  015_add_job_dedup_index.sql  README.md  apply_migration.py
backend/scripts/: add_path_title_columns.py  migrate_silverbullet.py  migrate_to_hierarchical.py
backend/tests/: conftest.py  test_auth.py  test_chat_service.py  test_dependencies_api.py  test_document_service.py  test_documents_api.py  test_embedding_service.py  test_folders_api.py  test_health.py  test_rate_limit.py  test_versions_api.py
mcp-server/: README.md  pyproject.toml
(+127 files in other folders)
