[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "bcrypt>=5.0.0",
    "fastapi==0.115.0",
    "passlib>=1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
