[project]
name = "backend"
version = "0.1.0"
description = "IsoCrates backend API for documentation management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi==0.115.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.32.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["litellm.*", "sqlalchemy.*", "pydantic_settings.*", "passlib.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
