[project]
name = "isocrates-mcp"
version = "0.1.0"
description = "MCP server for querying IsoCrates documentation from AI editors"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
isocrates-mcp = "isocrates_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isocrates_mcp"]
